cambios para la validacion
